--- a/src/styles.css
+++ b/src/styles.css
@@ -211,3 +211,51 @@ Add the correct display in Chrome and Safari.
 summary {
 	display: list-item;
 }
+
+/* START OF OWN STYLING */
+.carousel {
+	position: relative;
+	display: flex;
+	overflow: hidden;
+	width: 80%;
+	height: 60vh;
+	left: 10%;
+	margin-top: 10%;
+}
+
+.carousel > img {
+	width: 100%;
+	height: 100%;
+	flex-shrink: 0;
+}
+
+.left {
+	position: absolute;
+	top: 50%;
+	left: 5%;
+}
+
+.right {
+	position: absolute;
+	top: 50%;
+	right: 5%;
+}
+
+.dots {
+	text-align: center;
+	margin-top: 10px;
+}
+
+.dot {
+	border-radius: 50%;
+	height: 12px;
+	width: 12px;
+	margin: 0 5px;
+	display: inline-block;
+	background-color: gray;
+	cursor: pointer;
+}
+
+.dot.active {
+	background-color: black;
+}
